resolved fdo#38592 do not insert extraneous parameter in import

Importing already a Calc-only number of parameters do not insert
extraneous parameters.

(cherry picked from commit 4b9304ecdd067307e24e4388fe1addcab9e85bd0)

Change-Id: I011e3df24573fce9f2788c9311089af984650220